dynamically setting bg images on sections via JS + data attribute

--- a/wp-content/themes/point-church/.eslintrc
+++ b/wp-content/themes/point-church/.eslintrc
@@ -10,8 +10,10 @@
   },
   "rules": {
     "camelcase": ["warn", { "properties": "always" }],
+    "func-names": ["error", "as-needed"],
     "id-length": [0],
     "indent": ["error", 2],
+    "no-invalid-this": [0],
     "no-underscore-dangle": [0],
     "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "object-curly-spacing": ["error", "always"],
